@@ -1,3 +1,8 @@
+2001-09-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-form.el (w3m-form-replace-string): Protect against the
+	illegal type of arguments.
+
 2001-09-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-region): Defined new optional argument, `url'.
